// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateErrorListRecord should update the record and update error_status from NULL to NULL when exceptions not generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 0,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": null,
  "error_reason": null,
  "error_report": "",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": null,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from NULL to UNRESOLVED when exceptions generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 1,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": 1,
  "error_reason": "HO100100",
  "error_report": "HO100100||br7:ArrestSummonsNumber",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 1,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from RESOLVED to RESOLVED when exceptions not generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 0,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": null,
  "error_reason": null,
  "error_report": "",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 2,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from RESOLVED to UNRESOLVED when exceptions generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 1,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": 1,
  "error_reason": "HO100100",
  "error_report": "HO100100||br7:ArrestSummonsNumber",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 1,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from SUBMITTED to RESOLVED when exceptions not generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 0,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": null,
  "error_reason": null,
  "error_report": "",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 2,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from SUBMITTED to UNRESOLVED when exceptions generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 1,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": 1,
  "error_reason": "HO100100",
  "error_report": "HO100100||br7:ArrestSummonsNumber",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 1,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from UNRESOLVED to RESOLVED when exceptions not generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 0,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": null,
  "error_reason": null,
  "error_report": "",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 2,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;

exports[`updateErrorListRecord should update the record and update error_status from UNRESOLVED to UNRESOLVED when exceptions generated 1`] = `
{
  "annotated_msg": Any<String>,
  "asn": "new_asn",
  "court_code": "B01EF01",
  "court_date": 2011-09-26T00:00:00.000Z,
  "court_name": "Magistrates' Courts London Croydon",
  "court_name_upper": "MAGISTRATES' COURTS LONDON CROYDON",
  "court_reference": "01ZD0304208",
  "court_room": "01",
  "create_ts": Any<Date>,
  "defendant_name": "TRTHREE TRPSTWO",
  "defendant_name_upper": "TRTHREE TRPSTWO",
  "error_count": 1,
  "error_id": Any<Number>,
  "error_insert_ts": Any<Date>,
  "error_locked_by_id": null,
  "error_quality_checked": 1,
  "error_reason": "HO100100",
  "error_report": "HO100100||br7:ArrestSummonsNumber",
  "error_resolved_by": null,
  "error_resolved_ts": null,
  "error_status": 1,
  "is_urgent": 0,
  "last_pnc_failure_resubmission_ts": null,
  "message_id": Any<String>,
  "msg_received_ts": Any<Date>,
  "org_for_police_filter": "99ZD  ",
  "phase": 1,
  "pnc_update_enabled": "Y",
  "ptiurn": "new_ptiurn",
  "resolution_ts": null,
  "total_pnc_failure_resubmissions": 0,
  "trigger_count": 0,
  "trigger_insert_ts": Any<Date>,
  "trigger_locked_by_id": null,
  "trigger_quality_checked": null,
  "trigger_reason": null,
  "trigger_resolved_by": null,
  "trigger_resolved_ts": null,
  "trigger_status": null,
  "updated_msg": Any<String>,
  "user_updated_flag": 0,
}
`;
